--- a/views/index.html
+++ b/views/index.html
@@ -94,8 +94,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button>
-                            Telecharger mon CV
+                        <button class="down-cv">
+                            <a href="#">Telecharger mon CV</a>
                         </button>
                     </div>
                 </div>
