--- a/views/index.html
+++ b/views/index.html
@@ -123,6 +123,7 @@
                <div class="content-service">
                    <div class="icone">
                        <i class="fa-3x fas fa-laptop" style="color: #ff4900;"></i>
+                       <p>contenu for mobile</p>
                    </div>
                </div>
 
@@ -134,7 +135,7 @@
 
                <div class="content-service">
                    <div class="icone">
-                       <i class="fa-3x fas fa-" style="color: #ff4900;"></i>
+                       <i class="fa-3x fas fa-laptop"style="color: #ff4900;"></i>
                    </div>
                </div>
             </div>
