--- a/views/index.html
+++ b/views/index.html
@@ -119,25 +119,29 @@
                 </p>
                 <hr style="background-color: #ff4900; height: 2px; margin: 0px 46%;" />
             </div>
-            <div class="conteneur-service">
-               <div class="content-service">
-                   <div class="icone">
-                       <i class="fa-3x fas fa-laptop" style="color: #ff4900;"></i>
-                       <p>contenu for mobile</p>
-                   </div>
-               </div>
-
-               <div class="content-service">
-                   <div class="icone">
-                       <i class="fa-3x fas fa-mobile" style="color: #ff4900;"></i>
-                   </div>
-               </div>
-
-               <div class="content-service">
-                   <div class="icone">
-                       <i class="fa-3x fas fa-laptop"style="color: #ff4900;"></i>
-                   </div>
-               </div>
+            <div class="container text-white w-100 m-md-auto">
+                <div class="flex flex-wrap">
+                    <div class="conteneur-service row">
+                        <div class="content-service border col-md-12 col-lg-4 ">
+                            <div class="icone p-3">
+                                <p class="text-center"><i class="fa-3x fas fa-laptop" style="color: #ff4900;"></i></p>
+                                <h4 class="text-center" style="color: #ff4900;">Developpement web</h4>
+                            </div>
+                        </div>
+                        <div class="content-service border col-md-12 col-lg-4">
+                            <div class="icone p-3">
+                                <p class="text-center"><i class="fa-3x fas fa-mobile" style="color: #ff4900;"></i></p>
+                                <h4 class="text-center" style="color: #ff4900;">Developpement mobile</h4>    
+                            </div>
+                        </div>
+                        <div class="content-service border col-md-12 col-lg-4">
+                            <div class="icone p-3">
+                                <p class="text-center"><i class="fa-3x fas fa-image"style="color: #ff4900;"></i></p>
+                                <h4 class="text-center" style="color: #ff4900;">Design graphique</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
