[IMP ] amélioration responsive

--- a/views/index.html
+++ b/views/index.html
@@ -36,12 +36,12 @@
             <a href="#top"><span class="fleche-top">↑</span></a>
         </div>
         
-        <div class="banniere row justify-content-between">
-            <div class="small-description col-6">
+        <div class="container banniere row  justify-content-between">
+            <div class="row small-description col-12 text-center text-md-left col-sm-6">
                 <div class="left">
                     <div class="texte-titre">
                         <h2>Hello <span style="color: #ff4900;">World !</span></h2>
-                        <div class="auto-typing"></div>
+                        <div class="auto-typing mb-5 mb-lg-0"></div>
                         <div class="texte-descriptif">
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, repellendus 
                             porro, ipsum eaque fugit doloremque consequatur molestias veniam iste a facere 
@@ -49,18 +49,20 @@
                         </div>
                     </div>
                 
-                    <div class="link">
-                        <ul class="social-link">
-                            <li><a href="#"><img src="../assets/img/facebook.png" width="40" height="40" alt="fb icone"></a></li>
-                            <li><a href="#"><img src="../assets/img/g+.png" width="40" height="40" alt="gmail icone"></a></li>
-                            <li><a href="#"><img src="../assets/img/Github.png" width="40" height="40" alt="github icone"></a></li>
-                            <li><a href="#"><img src="../assets/img/linkedin.png" width="40" height="40" alt="linkedin icone"></a></li>
+                    <div class="container link">
+                        <ul class="row social-link">
+                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/facebook.png" width="40" height="40" alt="fb icone"></a></li>
+                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/g+.png" width="40" height="40" alt="gmail icone"></a></li>
+                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/Github.png" width="40" height="40" alt="github icone"></a></li>
+                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/linkedin.png" width="40" height="40" alt="linkedin icone"></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="photo-profil col-5">
-                <img src="../assets/img/stark.jpg" alt="Mon profil" width="300" height="470">
+            <div class="container-sm photo-profil col-md-5">
+                <div class="row">
+                    <img src="../assets/img/stark.jpg" class="w-sm-100 mx-auto mt-5 mt-md-0" alt="Mon profil" width="300" height="400">
+                </div>
             </div>
         </div>
 
@@ -69,7 +71,7 @@
             <div class="photo-about col-3.5">
                 <img src="../assets/img/illweb4.jpg" width="330" height="370" alt="Photo about">
             </div>
-            <div class="my-information col-5">
+            <div class="my-information col-5 text-justify text-lg-left">
                 <div class="row head-about">
                     <h3>About Me</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque debitis 
@@ -108,8 +110,8 @@
 
         <div id="service" class="my-service">
             <div class="head-service text-center text-white">
-                <div class="banniere-service">
-                    <p class="m-0 p-0">What I Do ?</p>
+                <div class="banniere-service w-25 ">
+                    <p class="m-0 p-0 fs-6 ">What I Do ?</p>
                 </div>
                 <h2>My Service</h2>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis 
