[IMP] add section freelance and reformat code

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
 	<link href="../assets/fontawesome/css/fontawesome.css" rel="stylesheet">
 </head>
 <body>
-    <div id="top" class="container d-flex flex-column conteneur-principale">
+    <div id="top" class="d-flex flex-column conteneur-principale">
         <div class="my-navbar navbar fixed-top navbar-expand-lg">
                 <a href="index.html" class="navbar-brand logo">Dama</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -36,118 +36,138 @@
             <a href="#top"><span class="fleche-top">↑</span></a>
         </div>
         
-        <div class="container banniere row  justify-content-between">
-            <div class="row small-description col-12 text-center text-md-left col-sm-6">
-                <div class="left">
-                    <div class="texte-titre">
-                        <h2>Hello <span style="color: #ff4900;">World !</span></h2>
-                        <div class="auto-typing mb-5 mb-lg-0"></div>
-                        <div class="texte-descriptif">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, repellendus 
-                            porro, ipsum eaque fugit doloremque consequatur molestias veniam iste a facere 
-                            delectus maiores mollitia! Obcaecati sed debitis ipsam quis corrupti?</p>
+        <div class="container">
+            <div class="banniere row justify-content-between">
+                <div class="row small-description col-12 text-center text-md-left col-sm-6">
+                    <div class="left">
+                        <div class="texte-titre">
+                            <h2>Hello <span style="color: #ff4900;">World !</span></h2>
+                            <div class="auto-typing mb-5 mb-lg-0"></div>
+                            <div class="texte-descriptif">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, repellendus 
+                                porro, ipsum eaque fugit doloremque consequatur molestias veniam iste a facere 
+                                delectus maiores mollitia! Obcaecati sed debitis ipsam quis corrupti?</p>
+                            </div>
                         </div>
-                    </div>
-                
-                    <div class="container link">
-                        <ul class="row social-link">
-                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/facebook.png" width="40" height="40" alt="fb icone"></a></li>
-                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/g+.png" width="40" height="40" alt="gmail icone"></a></li>
-                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/Github.png" width="40" height="40" alt="github icone"></a></li>
-                            <li class="col mt-2 mt-lg-0"><a href="#"><img src="../assets/img/linkedin.png" width="40" height="40" alt="linkedin icone"></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="container-sm photo-profil col-md-5">
-                <div class="row">
-                    <img src="../assets/img/stark.jpg" class="w-sm-100 mx-auto mt-5 mt-md-0" alt="Mon profil" width="300" height="400">
-                </div>
-            </div>
-        </div>
-
-
-        <div id="about" class="about row">
-            <div class="photo-about col-3.5">
-                <img src="../assets/img/illweb4.jpg" width="330" height="370" alt="Photo about">
-            </div>
-            <div class="my-information col-5 text-justify text-lg-left">
-                <div class="row head-about">
-                    <h3>About Me</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque debitis 
-                        corrupti ea dolorem facere quod sit, minima tenetur omnis. Sit possimus 
-                        eaque rerum veniam tempore eum culpa, voluptatem aperiam dignissimos.</p>
-                </div>
-                <div class="body-content-about">
-                    <div class="row list-info">
-                        <div class="col">
-                            <ul>
-                                <li><span class="cle">Nom</span></li>
-                                <li><span class="cle">Age</span></li>
-                                <li><span class="cle">Fonction</span></li>
-                                <li><span class="cle">Télephone</span></li>
-                                <li><span class="cle">Email</span></li>
-                            </ul>
-                        </div>
-                        <div class="col">
-                            <ul>
-                                <li>Dama RAKOTOARINAIVO</li>
-                                <li>20 ans</li>
-                                <li>Développeur front-end</li>
-                                <li>+261 34 56 484 25</li>
-                                <li>diamondrap20.aps1b@gmail.com</li>
+                    
+                        <div class="link">
+                            <ul class="row w-100 social-link">
+                                <li class="col mt-2 mt-lg-0"><a href="#"><i class="fa-2x fab fa-facebook"></i></a></li>
+                                <li class="col mt-2 mt-lg-0"><a href="#"><i class="fa-2x fab fa-google"></i></a></li>
+                                <li class="col mt-2 mt-lg-0"><a href="#"><i class="fa-2x fab fa-github"></i></a></li>
+                                <li class="col mt-2 mt-lg-0"><a href="#"><i class="fa-2x fab fa-linkedin"></i></a></li>
+                                <li class="col mt-2 mt-lg-0"><a href="#"><i class="fa-2x fab fa-twitter"></i></a></li>
                             </ul>
                         </div>
                     </div>
+                </div>
+                <div class="container-sm photo-profil col-md-5">
                     <div class="row">
-                        <button class="down-cv">
-                            <a href="#">Telecharger mon CV</a>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="service" class="my-service">
-            <div class="head-service text-center text-white">
-                <div class="banniere-service w-25 ">
-                    <p class="m-0 p-0 fs-6 ">What I Do ?</p>
-                </div>
-                <h2>My Service</h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis 
-                    sapiente natus provident commodi reiciendis id deserunt optio itaque, 
-                    praesentium aliquam quos veniam exercitationem facere delectus dolor 
-                    consequuntur sequi recusandae repudiandae.
-                </p>
-                <hr style="background-color: #ff4900; height: 2px; margin: 0px 46%;" />
-            </div>
-            <div class="container text-white w-100 m-md-auto">
-                <div class="flex flex-wrap">
-                    <div class="conteneur-service row">
-                        <div class="content-service border col-md-12 col-lg-4 ">
-                            <div class="icone p-3">
-                                <p class="text-center"><i class="fa-3x fas fa-laptop" style="color: #ff4900;"></i></p>
-                                <h4 class="text-center" style="color: #ff4900;">Developpement web</h4>
-                            </div>
-                        </div>
-                        <div class="content-service border col-md-12 col-lg-4">
-                            <div class="icone p-3">
-                                <p class="text-center"><i class="fa-3x fas fa-mobile" style="color: #ff4900;"></i></p>
-                                <h4 class="text-center" style="color: #ff4900;">Developpement mobile</h4>    
-                            </div>
-                        </div>
-                        <div class="content-service border col-md-12 col-lg-4">
-                            <div class="icone p-3">
-                                <p class="text-center"><i class="fa-3x fas fa-image"style="color: #ff4900;"></i></p>
-                                <h4 class="text-center" style="color: #ff4900;">Design graphique</h4>
-                            </div>
-                        </div>
+                        <img src="../assets/img/stark.jpg" class="w-sm-100 mx-auto mt-5 mt-md-0" alt="Mon profil" width="300" height="400">
                     </div>
                 </div>
             </div>
         </div>
 
 
+        <div class="container">
+            <div id="about" class="about row">
+                <div class="photo-about col-3.5">
+                    <img src="../assets/img/illweb4.jpg" width="330" height="370" alt="Photo about">
+                </div>
+                <div class="my-information col-5 text-justify text-lg-left">
+                    <div class="row head-about">
+                        <h3>[About Me]</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque debitis 
+                            corrupti ea dolorem facere quod sit, minima tenetur omnis. Sit possimus 
+                            eaque rerum veniam tempore eum culpa, voluptatem aperiam dignissimos.</p>
+                    </div>
+                    <div class="body-content-about">
+                        <div class="row list-info">
+                            <div class="col">
+                                <ul>
+                                    <li><span class="cle">Nom</span></li>
+                                    <li><span class="cle">Age</span></li>
+                                    <li><span class="cle">Fonction</span></li>
+                                    <li><span class="cle">Télephone</span></li>
+                                    <li><span class="cle">Email</span></li>
+                                </ul>
+                            </div>
+                            <div class="col">
+                                <ul>
+                                    <li>Dama RAKOTOARINAIVO</li>
+                                    <li>20 ans</li>
+                                    <li>Développeur front-end</li>
+                                    <li>+261 34 56 484 25</li>
+                                    <li>diamondrap20.aps1b@gmail.com</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <button class="down-cv">
+                                <a href="#">Telecharger mon CV</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div id="service" class="row my-service">
+                <div class="head-service text-center text-white">
+                    <div class="banniere-service w-25 ">
+                        <p class="m-0 p-0 fs-6 ">What I Do ?</p>
+                    </div>
+                    <h2>[My Service]</h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis 
+                        sapiente natus provident commodi reiciendis id deserunt optio itaque, 
+                        praesentium aliquam quos veniam exercitationem facere delectus dolor 
+                        consequuntur sequi recusandae repudiandae.
+                    </p>
+                    <hr style="background-color: #ff4900; height: 2px; margin: 0px 46%;" />
+                </div>
+                <div class="row text-white conteneur-service w-100">
+                    <div class="content-service border">
+                        <p class="text-center"><i class="fa-3x fas fa-laptop-code" style="color: #ff4900;"></i></p>
+                        <h4 class="text-center" style="color: #ff4900;">Developpement web</h4>
+                        <p class="text-center">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore fuga quidem, nobis at soluta. 
+                            Exercitationem expedita, magni veritatis voluptate at laudantium, similique minima quibusdam, 
+                            fugit voluptatibus molestiae eum eius!
+                        </p>
+                    </div>
+                    <div class="content-service border">
+                        <p class="text-center"><i class="fa-3x fas fa-mobile" style="color: #ff4900;"></i></p>
+                        <h4 class="text-center" style="color: #ff4900;">Developpement mobile</h4>    
+                        <p class="text-center">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore fuga quidem, nobis at soluta. 
+                            Exercitationem expedita, magni veritatis voluptate at laudantium, similique minima quibusdam, 
+                            fugit voluptatibus molestiae eum eius!
+                        </p>
+                    </div>
+                    <div class="content-service border">
+                        <p class="text-center"><i class="fa-3x fas fa-image"style="color: #ff4900;"></i></p>
+                        <h4 class="text-center" style="color: #ff4900;">Design graphique</h4>
+                        <p class="text-center">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore fuga quidem, nobis at soluta. 
+                            Exercitationem expedita, magni veritatis voluptate at laudantium, similique minima quibusdam, 
+                            fugit voluptatibus molestiae eum eius!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="freelance">
+            <div class="mask-background-freelance"></div>
+            <div class="content-freelance text-center column">
+                <h2 class="text-white font-weight-bold">Je suis disponible pour un freelance</h2>
+                <button class="freelance-btn btn btn-light rounded-pill">
+                Engagez moi
+                </button>
+            </div>
+        </div>
 
 
     </div>
