--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -18,7 +18,6 @@ body{
   height: 50px;
 }
 
-
 .conteneur-principale{
     display: flex;
     flex-direction: column;
@@ -138,7 +137,6 @@ a{
     color:  #ede4e4;
   }
 
-
   .down-cv{
     border-radius: 30px;
     border-color: #ff4900;
@@ -172,4 +170,48 @@ a{
 
   .conteneur-service{
     margin-top: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .content-service{
+    width: 30%;
+    padding: 20px 30px;
+    border-radius: 20px;
+  }
+
+
+  /*FREELANCE SECTION*/
+  .freelance{
+    margin-bottom: 200px;
+    height: 350px;
+    background-image: url(../img/bg-freelance.jpg);
+    position: relative;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+
+  .mask-background-freelance{
+    height: 350px;
+    background-color: black;
+    opacity: 0.5;
+    position: relative;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+
+  .content-freelance{
+    position: absolute;
+    top: 130px;
+    left: 0px;
+    right: 0px;
+  }
+
+  .freelance-btn{
+    color: black;
+    padding: 15px;
+    font-weight: bold;
+  }
+  .freelance-btn:hover{
+    color: #ff4900;
   }
