--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div id="top" class="d-flex flex-column conteneur-principale">
+        <!--Navigation-->
         <div class="my-navbar navbar fixed-top navbar-expand-lg">
                 <a href="index.html" class="navbar-brand logo">Dama</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -25,23 +26,25 @@
                         <li class="nav-item m-3"><a class="nav-link" href="#top">Home</a></li>
                         <li class="nav-item m-3"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item m-3"><a class="nav-link" href="#service">Services</a></li>
-                        <li class="nav-item m-3"><a class="nav-link" href="#">Formations</a></li>
-                        <li class="nav-item m-3"><a class="nav-link" href="#">Projets</a></li>
-                        <li class="nav-item m-3"><a class="nav-link" href="#">Contact</a></li>
+                        <li class="nav-item m-3"><a class="nav-link" href="#projects">Projets</a></li>
+                        <li class="nav-item m-3"><a class="nav-link" href="#formation">Formations</a></li>
+                        <li class="nav-item m-3"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
         </div>
         
+        <!--Scroll to top-->
         <div class="nav-top absolute fixed-bottom">
-            <a href="#top"><span class="fleche-top">↑</span></a>
+            <a href="#top"><i class="fleche-top fa-2x fa fa-angle-up"></i></a>
         </div>
         
+        <!--Presentation-->
         <div class="container">
             <div class="banniere row justify-content-between">
                 <div class="row small-description col-12 text-center text-md-left col-sm-6">
                     <div class="left">
                         <div class="texte-titre">
-                            <h2>Hello <span style="color: #ff4900;">World !</span></h2>
+                            <h2 style="font-weight: bold;">[Hello <span style="color: #ff4900;">World !]</span></h2>
                             <div class="auto-typing mb-5 mb-lg-0"></div>
                             <div class="texte-descriptif">
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, repellendus 
@@ -69,7 +72,7 @@
             </div>
         </div>
 
-
+        <!--About-->
         <div class="container">
             <div id="about" class="about row">
                 <div class="photo-about col-3.5">
@@ -77,7 +80,7 @@
                 </div>
                 <div class="my-information col-5 text-justify text-lg-left">
                     <div class="row head-about">
-                        <h3>[About Me]</h3>
+                        <h3 style="font-weight: bold;">[About <span style="color: #ff4900;">Me</span>]</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque debitis 
                             corrupti ea dolorem facere quod sit, minima tenetur omnis. Sit possimus 
                             eaque rerum veniam tempore eum culpa, voluptatem aperiam dignissimos.</p>
@@ -113,21 +116,22 @@
             </div>
         </div>
 
+        <!--Service-->
         <div class="container">
             <div id="service" class="row my-service">
                 <div class="head-service text-center text-white">
-                    <div class="banniere-service w-25 ">
+                    <div class="badge-head w-25 ">
                         <p class="m-0 p-0 fs-6 ">What I Do ?</p>
                     </div>
-                    <h2>[My Service]</h2>
+                    <h2 style="font-weight: bold;">[My <span style="color: #ff4900;">Service</span>]</h2>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis 
                         sapiente natus provident commodi reiciendis id deserunt optio itaque, 
                         praesentium aliquam quos veniam exercitationem facere delectus dolor 
                         consequuntur sequi recusandae repudiandae.
                     </p>
-                    <hr style="background-color: #ff4900; height: 2px; margin: 0px 46%;" />
+                    <hr style="background-color: #ff4900; height: 2px; margin: 0px 40%;" />
                 </div>
-                <div class="row text-white conteneur-service w-100">
+                <div class="row conteneur-service text-white w-100">
                     <div class="content-service border">
                         <p class="text-center"><i class="fa-3x fas fa-laptop-code" style="color: #ff4900;"></i></p>
                         <h4 class="text-center" style="color: #ff4900;">Developpement web</h4>
@@ -159,6 +163,7 @@
             </div>
         </div>
 
+        <!--Freelance-->
         <div class="freelance">
             <div class="mask-background-freelance"></div>
             <div class="content-freelance text-center column">
@@ -166,6 +171,24 @@
                 <button class="freelance-btn btn btn-light rounded-pill">
                 Engagez moi
                 </button>
+            </div>
+        </div>
+
+        <!--Projet-->
+        <div class="container">
+            <div id="projects" class="row my-projects">
+                <div class="head-projects text-center text-white">
+                    <div class="badge-head w-25 ">
+                        <p class="m-0 p-0 fs-6 ">What I Did ?</p>
+                    </div>
+                    <h2 style="font-weight: bold;">[My <span style="color: #ff4900;">projects</span>]</h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis 
+                        sapiente natus provident commodi reiciendis id deserunt optio itaque, 
+                        praesentium aliquam quos veniam exercitationem facere delectus dolor 
+                        consequuntur sequi recusandae repudiandae.
+                    </p>
+                    <hr style="background-color: #ff4900; height: 2px; margin: 0px 40%;" />
+                </div>
             </div>
         </div>
 
